# pollmevals

./: .env.example  .gitignore  .gitleaksignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTEXT.md  EVAL-WIRE-be_01.md  EVAL-WIRE-doc_01.md  EVAL-WIRE-fe_01.md  INDEX.md  MASTER.md  Makefile  README.md  REVIEW-anti-slop-G1-G3.md  REVIEW-anti-slop-G4-contamination.md  TODO.md  eslint.config.mjs  lefthook.yml  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  tsconfig.options.json
.claude/: settings.json
.forgeplan/: config.yaml  project-agent-matrix.yaml
.forgeplan/adrs/: ADR-001-concurrency-model-for-smoke-orchestrator-semaphore-per-provider-rate-awareness.md  ADR-002-reproduce-semantics-evaluator-only-not-full-pipeline.md  ADR-003-model-selection-for-v0-1-smoke-5-model-lineup-provider-routing.md  ADR-004-adopt-moleculerpy-as-distributed-orchestrator-for-prd-003-weekly-cadence.md  ADR-005-judge-score-aggregation-median-reducer-bootstrap-ci-lower-bound-publication-gate.md  ADR-006-phase-1-14-model-adoption-cerebras-runpod-routes-cost-matrix.md  ADR-007-hybrid-task-pack-sourcing-own-authored-start-licensed-import-allowed-with-attribution.md  ADR-008-atomic-binary-requirements-feed-scoring-components-not-replace-them.md  ADR-013-publish-reliability-metrics-pass-k-ceiling-pass-k-reliability-flakiness-alongside-pass-1-and-best-of-n.md  ADR-014-amend-adr-007-admit-livecodebench-bigcodebench-swe-rebench-to-tier-2-sourcing-allowlist.md  ADR-015-methodology-v0-2-5-frontier-judge-panel-deterministic-lint-typing-judges-score-subjective-axes-only.md
.forgeplan/epics/: EPIC-001-v0-1-launch-open-eval-evidence-layer.md
.forgeplan/evidence/: EVID-001-prior-art-helm-stanford-crfm-scenario-state-json-cost-gap.md  EVID-002-prior-art-mteb-huggingface-vendor-honor-model-zero-shot-score.md  EVID-003-prior-art-lm-evaluation-harness-eleutherai-use-cache-sqlite-integer-task-versioning.md  EVID-004-prior-art-inspect-ai-uk-aisi-task-solver-scorer-evallog-gaps.md  EVID-005-prior-art-swe-bench-princeton-docker-harness-scaffolding-attribution-gap.md  EVID-006-guardian-gate-review-of-prd-001-concerns.md  EVID-007-architect-reviewer-audit-rfc-001-prd-001-chain-concerns-resolved.md  EVID-008-guardian-gate-review-of-prd-001-gate-2-post-remediation-pass.md  EVID-009-wave-1-sprint-phase-2a-prd-001-fr-001-fr-002-resolved-via-validators-rewrite.md  EVID-010-wave-1-sprint-phase-2a-rfc-001-impl-tasks-1-2-14-15-skeleton-litellm-compose-digest-pinned-dockerfile.md  EVID-011-wave-2-sprint-phase-2a-spec-001-pydantic-contracts-realized-3-schema-drifts-pinned.md  EVID-012-wave-3-sprint-phase-2a-note-001-crash-recovery-journalwriter-append-only-ndjson-realized.md  EVID-013-wave-3-sprint-phase-2a-rfc-001-manifest-write-order-atomic-state-machine-writer-3-drift-fixes.md  EVID-014-wave-4-rfc-001-cost-attribution-pricing-snapshot-reconcile-alert-budget-gate-realized.md  EVID-015-wave-4-evalcaller-protocol-seam-architect-finding-4-inspectevalcaller-stub-fakeevalcaller.md  EVID-016-wave-5-gridrunner-asyncio-gather-semaphore-3-journal-cost-caller-wiring-ac-7.md  EVID-017-wave-5-e2e-integration-prd-001-sc-1-sc-3-ac-2-ac-3-proved-with-fakeevalcaller-333-tests-pass.md  EVID-018-moleculerpy-capability-audit-phase-2a-research-user-owned-dependency-lowers-adoption-risk.md  EVID-019-openrouter-smoke-test-phase-2b-pre-flight-4-5-adr-003-models-ok-real-0-00017-measurement.md  EVID-020-phase-2b-stack-bootstrap-postgres-nats-litellm-lgtm-live-5-5-models-through-proxy-50-prometheus-series-tempo-traces.md  EVID-021-phase-2c-otel-spans-inspectevalcaller-real-impl-code-review-of-commit-0e494f6.md  EVID-022-phase-2c-otel-inspectevalcaller-patch-verified-commit-9e668db-addresses-evid-021-concerns.md  EVID-023-phase-3-w1-h1-spike-inspect-ai-per-judge-access-supported-via-list-scorer-fallback-path.md  (+23 more)
.moon/: tasks.yml  toolchains.yml  workspace.yml
apps/eval-core-py/: README.md  moon.yml  pyproject.toml
apps/eval-core-py/scripts/: __init__.py  bcb_e2e_smoke.py  build_leaderboard.py  build_real_board.py  diagnose_judge_json.py  gen_tasks_json.py  ingest_bigcodebench.py  ingest_livecodebench.py  ingest_swe_rebench.py  judge_live_smoke.py  smoke_run.py  stack_exec_live_smoke.py  stack_score_live_smoke.py
apps/eval-core-py/src/: __init__.py
apps/eval-core-py/src/contracts/: __init__.py  aggregates.py  artifact_ref.py  eval_row.py  judge.py  manifest.py  pins.py  task.py
apps/eval-core-py/src/evaluators/: __init__.py  complexity_evaluator.py  correctness_evaluator.py  coverage_evaluator.py  lint_evaluator.py  protocol.py  python_correctness_evaluator.py  secret_scan_evaluator.py  type_safety_evaluator.py
apps/eval-core-py/src/evaluators/sandbox/: __init__.py  runner.py
apps/eval-core-py/src/inspect_tasks/: __init__.py
apps/eval-core-py/src/leaderboard/: __init__.py  aggregate.py  board.py
apps/eval-core-py/src/orchestrator/: __init__.py  auto_metrics.py  cost.py  eval_caller.py  grid_runner.py  journal.py  judge_panel.py  manifest_writer.py  stack_caller.py  stack_executor.py  stack_scoring.py  telemetry.py
apps/eval-core-py/src/scoring/: __init__.py  pass_k.py  requirements.py
apps/eval-core-py/tests/: conftest.py  test_auto_metrics.py  test_board.py  test_component_score.py  test_contracts.py  test_correctness_evaluator.py  test_cost.py  test_coverage_evaluator.py  test_eval_caller.py  test_evaluators.py  test_fill_missing.py  test_grid_runner.py  test_grid_runner_judges.py  test_grid_runner_judges_integration.py  test_integration.py  test_journal.py  test_judge_panel.py  test_leaderboard.py  test_manifest_writer.py  test_pass_k.py  test_python_correctness_evaluator.py  test_sandbox.py  test_smoke_runner.py  test_stack_caller.py  test_stack_executor.py  test_stack_scoring.py  test_task_contracts.py  test_telemetry.py  test_type_safety_evaluator.py  test_validate_task_specs.py
data/: models.json  sample-leaderboard.json  sample-run-manifest.json  stacks.json  tasks.json
docs/: INDEX.md  PROJECT_TREE.md
guides/: INDEX.md
infra/: docker-compose.litellm.yml  docker-compose.observability.yml  litellm-config.yaml
(+473 files in other folders)
