[project]
name = "pollmevals-eval-core"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
description = "POLLMEVALS evaluation orchestrator — thin wrapper around Inspect AI adding immutability, cost attribution, and leaderboard hygiene."
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    # Exact pin per RFC-001 RR-1 — never use >= or ~= for this dep.
    "inspect-ai==0.3.46",
    # openai is an optional dep of inspect-ai required by the openai/ provider
    # prefix (used to route candidate + judge calls through the LiteLLM proxy).
    # RFC-002 Slice B / Phase 3 W1 H1 spike dependency.
    "openai>=1.30,<2",
    "pydantic>=2.5,<3",
    "httpx>=0.27,<1",
    "jsonschema>=4.20,<5",
    # OTel instrumentation — Phase 2C
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp-proto-http>=1.29.0",
    # Library-first cost reconciliation (per CLAUDE.md, 2026-05-25).
    # Used via `litellm.cost_per_token()` in scripts/smoke_run.py — auto-updates
    # with model price changes from LiteLLM's maintained model_cost map.
    "litellm>=1.50,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "types-jsonschema>=4.26.0.20260518",
]
